--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ nav{
 .footer{
 	background-color:#666666;
 	border-top:solid;
-	border-top-color:white;
+	border-top-color:#3498db;
 	border-top-width:4px;
 }
 .footer p{
@@ -37,14 +37,18 @@ nav{
 }
 .panelHeader1{
 	font-size:28px;
-	font-family: 'Georgia', Times, Times New Roman, serif;
+	/*font-family: 'Georgia', Times, Times New Roman, serif;*/
 	color:black;
 }
 .panelHeader2{
 	font-size:28px;
-	font-family: 'Georgia', Times, Times New Roman, serif;
+	/*font-family: 'Georgia', Times, Times New Roman, serif;*/
 	color:white;
 }
 .panelHeaderDiv{
 	background-color: white !important;
+	border-bottom-color:#DFDFDF !important;
+}
+.wholePanel{
+	border:none;
 }
