fixed background image?

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 
 body{
-	background-image: url(../images/ep_naturalwhite.PNG);
+	background-image: url(../images/ep_naturalwhite.png);
 }
 .nbar{
 	/*background-color:#4aaaa5;*/
